Added read me, and fixed the last of setup, needs better documentation but it's functional